fix dropdowns, fix styles overflow

--- a/src/containers/Customize/styles.scss
+++ b/src/containers/Customize/styles.scss
@@ -87,6 +87,7 @@
     padding: 10px 0;
     border-bottom: $grey solid 1px;
     opacity: 1;
+    overflow: auto;
     transition: opacity 0.2s;
 
     &.delete {
